k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: templates-showcase
  labels:
    app.kubernetes.io/name: templates-showcase
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: templates-showcase
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
